virtual-services/gateway.yaml

---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: general-gateway
  namespace: istio-system
  labels:
    app: istio
    istio: istio
spec:
  selector:
    istio: istio
  servers:
  - hosts:
    - '*'
    port:
      name: http
      number: 80
      protocol: HTTP
  #   # Upgrade HTTP to HTTPS
  #   tls:
  #     httpsRedirect: true
  # - hosts:
  #   - '*'
  #   port:
  #     name: https
  #     number: 443
  #     protocol: HTTPS
  #   tls:
  #     mode: SIMPLE
  #     credentialName: gateway-certs
